Adding responsive layout, creating components and creating new styles

--- a/Javascript/shire-bank/src/pages/Application/Dashboard/index.html
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/index.html
@@ -13,7 +13,10 @@
     rel="stylesheet">
   <link rel="stylesheet" href="../../../../global.css">
   <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./components/Home/styles.css">
+  <link rel="stylesheet" href="./components/Statement/styles.css">
   <script src="./components/Home/index.js" defer></script>
+  <script src="./components/Statement/index.js" defer></script>
   <title>Shire | Dashboard</title>
 </head>
 
@@ -27,7 +30,7 @@
         </div>
         <div class="aside-button-option">
           <img src="../../../assets/icon-statement.png" alt="">
-          <button>Extrato</button>
+          <button onclick="Statement()">Extrato</button>
         </div>
         <div class="aside-button-option">
           <img src="../../../assets/icon-transfer.png" alt="">
@@ -61,89 +64,7 @@
     </aside>
 
     <div id="root" class="root">
-      <section class="home-section-container home-section-info">
-        <div class="home-section-content">
-          <div class="home-section-info-user">
-            <h1>Olá, <span>Luis Fernando</span></h1>
-            <a href="../../../../index.html">
-              <button class="button-primary-color aside-button-logout">Sair</button>
-            </a>
-          </div>
 
-          <div class="home-section-info-balance">
-            <h3>Saldo da conta</h3>
-            <span>R$5.678,90</span>
-          </div>
-        </div>
-      </section>
-
-      <section class="home-section-container home-section-options">
-        <button class="home-section-options-card">
-          <img src="../../../assets/icon-statement.png" alt="">
-          <span>Extrato</span>
-        </button>
-
-        <button class="home-section-options-card">
-          <img src="../../../assets/icon-transfer.png" alt="">
-          <span>Transferência</span>
-        </button>
-
-        <button class="home-section-options-card">
-          <img src="../../../assets/icon-payment2.png" alt="">
-          <span>Pagamentos</span>
-        </button>
-
-        <button class="home-section-options-card">
-          <img src="../../../assets/icon-loan.png" alt="">
-          <span>Empréstimos</span>
-        </button>
-
-        <button class="home-section-options-card">
-          <img src="../../../assets/icon-investiment.png" alt="">
-          <span>Investimentos</span>
-        </button>
-
-        <button class="home-section-options-card">
-          <img src="../../../assets/icon-report.png" alt="">
-          <span>Relatórios</span>
-        </button>
-
-        <button class="home-section-options-card">
-          <img src="../../../assets/icon-cashback.png" alt="">
-          <span>Cashback</span>
-        </button>
-
-        <button class="home-section-options-card">
-          <img src="../../../assets/icon-travel.png" alt="">
-          <span>Programa de Milhas</span>
-        </button>
-      </section>
-
-      <section class="home-section-container home-section-creditCard">
-        <div class="home-section-content">
-          <div class="home-section-creditCard-content">
-            <h2>Cartão de crédito</h2>
-            <div>
-              <h3>Fatura atual</h3>
-              <span>R$2.645,45</span>
-            </div>
-            <div>
-              <h3>Limite disponível</h3>
-              <span>R$3.278,67</span>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="home-section-container">
-        <div class="home-section-content">
-          <h2>Empréstimo</h2>
-          <div>
-            <h3>Valor disponível</h3>
-            <span>R$15.000,00</span>
-          </div>
-        </div>
-      </section>
     </div>
   </main>
 </body>
