--- a/Javascript/shire-bank/src/pages/Login/index.html
+++ b/Javascript/shire-bank/src/pages/Login/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../../assets/favicon.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Alexandria:wght@400;700&family=Metamorphous&family=Open+Sans:wght@400;600;700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@400;700&family=Metamorphous&family=Open+Sans:wght@400;600;700" rel="stylesheet">
   <link rel="stylesheet" href="../../../global.css">
   <link rel="stylesheet" href="../../components/Header/styles_header.css">
   <link rel="stylesheet" href="./styles.css">
@@ -45,7 +45,7 @@
           <p id="login-content-question">Não possui uma conta? <button onclick="register()">Registre-se</button></p>
         </div>
 
-        <form action="#">
+        <form action="../Application/Dashboard/index.html">
           <div>
             <label for="email">Email</label>
             <input type="email" id="email">
@@ -56,7 +56,7 @@
             <input type="password" id="password">
           </div>
 
-          <button><a href="../Application/Dashboard/index.html">Entrar</a></button>
+          <button>Entrar</button>
           <a href="#">Esqueceu a senha?</a>
         </form>
       </div>
