--- a/Javascript/shire-bank/index.html
+++ b/Javascript/shire-bank/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./src/assets/favicon.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Fira+Code:wght@400;700&family=Metamorphous&family=Open+Sans:wght@400;600;700&family=Sono:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Alexandria&family=Fira+Code:wght@400;700&family=Metamorphous&family=Open+Sans:wght@400;600;700&family=Sono:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./global.css">
   <link rel="stylesheet" href="./src/components/Header/styles_header.css">
   <link rel="stylesheet" href="./styles.css">
