--- a/Javascript/shire-bank/src/pages/Application/Dashboard/index.html
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/index.html
@@ -8,20 +8,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../../../assets/favicon.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Alexandria:wght@400;700&family=Metamorphous&family=Open+Sans:wght@400;600;700" rel="stylesheet">
-  
+  <link
+    href="https://fonts.googleapis.com/css2?family=Courgette&family=Alexandria:wght@400;700&family=Metamorphous&family=Open+Sans:wght@400;600;700"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="../../../../global.css">
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./components/Home/styles.css">
   <link rel="stylesheet" href="./components/Statement/styles.css">
   <link rel="stylesheet" href="./components/Loan/styles.css">
+  <link rel="stylesheet" href="./components/Investments/styles.css">
+  <link rel="stylesheet" href="./components/Report/styles.css">
+  <link rel="stylesheet" href="./components/Cashback/styles.css">
+  <link rel="stylesheet" href="./components/MilesProgram/styles.css">
 
   <script src="./components/Home/index.js" defer></script>
   <script src="./components/Statement/index.js" defer></script>
   <script src="./components/Transfer/index.js" defer></script>
   <script src="./components/Payments/index.js" defer></script>
   <script src="./components/Loan/index.js" defer></script>
-  
+  <script src="./components/Investments/index.js" defer></script>
+  <script src="./components/Report/index.js" defer></script>
+  <script src="./components/Cashback/index.js" defer></script>
+  <script src="./components/MilesProgram/index.js" defer></script>
+
   <title>Shire | Dashboard</title>
 </head>
 
@@ -51,25 +61,24 @@
         </div>
         <div class="aside-button-option">
           <img src="../../../assets/icon-investiment.png" alt="">
-          <button>Investimentos</button>
+          <button onclick="Investments()">Investimentos</button>
         </div>
         <div class="aside-button-option">
           <img src="../../../assets/icon-report.png" alt="">
-          <button>Relatórios</button>
+          <button onclick="Report()">Relatórios</button>
         </div>
         <div class="aside-button-option">
           <img src="../../../assets/icon-cashback.png" alt="">
-          <button>Cashback</button>
+          <button onclick="Cashback()">Cashback</button>
         </div>
         <div class="aside-button-option">
           <img src="../../../assets/icon-travel.png" alt="">
-          <button>Programa de Milhas</button>
+          <button onclick="MilesProgram()">Programa de Milhas</button>
         </div>
       </div>
     </aside>
 
     <div id="root" class="root">
-      
     </div>
   </main>
 </body>
