--- a/Javascript/shire-bank/src/pages/Application/Dashboard/index.html
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/index.html
@@ -32,6 +32,9 @@
   <script src="./components/Cashback/index.js" defer></script>
   <script src="./components/MilesProgram/index.js" defer></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1"></script>
+  <script src="../../../services/supabase.js"></script>
+
   <title>Shire | Dashboard</title>
 </head>
 
