--- a/Javascript/shire-bank/src/pages/Login/index.html
+++ b/Javascript/shire-bank/src/pages/Login/index.html
@@ -15,7 +15,7 @@
   <script src="../../components/Header/index.js" defer></script>
   <script src="./index.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1"></script>
-  <script src="./services/supabase.js"></script>
+  <script src="../../services/supabase.js"></script>
   <title>Shire | Junte-se ao banco perfeito pra você</title>
 </head>
 
