--- a/Javascript/shire-bank/src/pages/Application/Dashboard/index.html
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/index.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="./components/Cashback/styles.css">
   <link rel="stylesheet" href="./components/MilesProgram/styles.css">
 
+  <script src="./index.js" defer></script>
   <script src="./components/Home/index.js" defer></script>
   <script src="./components/Statement/index.js" defer></script>
   <script src="./components/Transfer/index.js" defer></script>
@@ -31,6 +32,8 @@
   <script src="./components/Report/index.js" defer></script>
   <script src="./components/Cashback/index.js" defer></script>
   <script src="./components/MilesProgram/index.js" defer></script>
+
+  <script src="../../../hooks/masks/index.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1"></script>
   <script src="../../../services/supabase.js"></script>
@@ -81,8 +84,7 @@
       </div>
     </aside>
 
-    <div id="root" class="root">
-    </div>
+    <div id="root" class="root"></div>
   </main>
 </body>
 
