--- a/Javascript/shire-bank/src/pages/Login/index.html
+++ b/Javascript/shire-bank/src/pages/Login/index.html
@@ -13,9 +13,13 @@
   <link rel="stylesheet" href="../../components/Header/styles_header.css">
   <link rel="stylesheet" href="./styles.css">
   <script src="../../components/Header/index.js" defer></script>
+
+  <script src="../../hooks/masks/index.js"></script>
   <script src="./index.js" defer></script>
+
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1"></script>
   <script src="../../services/supabase.js"></script>
+
   <title>Shire | Junte-se ao banco perfeito pra você</title>
 </head>
 
