Responsive layout creation for the entire application, creation of new components and project upload

--- a/Javascript/shire-bank/src/pages/Application/Dashboard/index.html
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/index.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="./components/Cashback/styles.css">
   <link rel="stylesheet" href="./components/MilesProgram/styles.css">
 
+  <script src="../../../tests/Home/index.js" defer></script>
   <script src="./index.js" defer></script>
   <script src="./components/Home/index.js" defer></script>
   <script src="./components/Statement/index.js" defer></script>
@@ -44,6 +45,7 @@
 <body>
   <main>
     <aside>
+      <button onclick="handleShowMenu()" class="button-menu"></button>
       <div class="aside-container">
         <div class="aside-button-option">
           <img src="../../../assets/icon-home.png" alt="">
