--- a/Javascript/shire-bank/src/pages/Login/index.html
+++ b/Javascript/shire-bank/src/pages/Login/index.html
@@ -30,14 +30,14 @@
         <span class="section-title">Shire</span>
         <div class="section-call-to-action">
           <h2>Comece a cuidar das suas finanças hoje mesmo.</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sed enim odit iusto delectus distinctio.</p>
+          <p class="section-call-to-action-subtitle">Esqueça burocracias, com o Shire você e sua família terão tudo que precisam em um só lugar.</p>
         </div>
         <div class="section-comments">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore architecto aspernatur dolores maiores commodi voluptatum.</p>
+          <p>O banco Shire me proporcionou a experiência que sempre busquei se tratando de finanças, sem cobranças desnecessárias e super prático.</p>
           <div class="section-comments-user">
-            <img src="../../assets/icon-user.png" alt="">
+            <img src="../../assets/icon-customerFemale.png" alt="">
             <div>
-              <span>Luis Fernando</span>
+              <span>Fernanda Souza</span>
               <span>Advogado</span>
             </div>
           </div>
