Creation of exercise 3 and completion of exercise 2

--- a/Ajax and API/server-flask/index.html
+++ b/Ajax and API/server-flask/index.html
@@ -35,7 +35,7 @@
   
       <div id="response-ex-one" class="form-response disabled">
         <span class="form-title">Resultado</span>
-        <div id="form-response-content" class="form-response-content"></div>
+        <div id="response-ex-one-content" class="form-response-content"></div>
       </div>
     </div>
 
@@ -51,9 +51,27 @@
         <button>Enviar</button>
       </form>
   
-      <div id="response-ex-one" class="form-response disabled">
+      <div id="response-ex-two" class="form-response disabled">
         <span class="form-title">Resultado</span>
-        <div id="form-response-content" class="form-response-content"></div>
+        <div id="response-ex-two-content" class="form-response-content"></div>
+      </div>
+    </div>
+
+    <div class="form-container">
+      <span class="form-title">Exercicío 3</span>
+      <form onsubmit="getPhrase(event)">
+
+        <div>
+          <label for="phrase">Frase</label>
+          <input type="text" id="phrase" required>
+        </div>
+  
+        <button>Enviar</button>
+      </form>
+  
+      <div id="response-ex-three" class="form-response disabled">
+        <span class="form-title">Resultado</span>
+        <div id="response-ex-three-content" class="form-response-content"></div>
       </div>
     </div>
   </main>
