--- a/Ajax and API/contacts-app/index.html
+++ b/Ajax and API/contacts-app/index.html
@@ -2,28 +2,45 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./script.js"></script>
-  <link rel="stylesheet" href="index.css">
-  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500&family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles/global.css">
+  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="./styles/modal.css">
+  <title>Lista de Contatos</title>
 </head>
 <body>
   <main>
-    <h1 class="h1-title">Lista de Contatos</h1>
-    <button onclick="openModal()">Adicionar contato</button>
-    <div id="contacts_list" class="contact-container">
+    <h1 class="main-title">Lista de Contatos</h1>
+    <button onclick="openModal()" class="addContact-button">
+      <img src="./images/icons/plus-icon.png">
+      <span>Adicionar contato</span>
+    </button>
+
+    <div id="contacts_list" class="contacts-container">
 
     </div>
 
-    <br>
-    <div class="modal-container hidden">
+    <div class="modal-container modal-hidden">
       <form onsubmit="addContact(event)" class="modal-content">
-        <h1>Adicionar Contato</h1>
-        <button type="button" class="button-exit" onclick="closeModal()"><img src="./icon/exit-icon.png"></button>
-        <input type="text" id="name" placeholder="Nome do Contato">
-        <input type="tel" id="number" maxlength="11" placeholder="Número do Contato">
-        <button>Adicionar Contato</button>
+        <h2 class="main-title">Adicionar Contato</h2>
+        <button type="button" class="modal-button-exit" onclick="closeModal()"><img src="./images/icons/exit-icon.png"></button>
+        <div class="modal-inputs">
+          <img src="./images/icons/user-icon.png">
+          <input type="text" id="modal_name" placeholder="Nome do Contato" required>
+        </div>
+        <div class="modal-inputs">
+          <img src="./images/icons/tel-icon.png">
+          <input type="tel" id="modal_number" onInput="masks()" maxlength="15" placeholder="Número do Contato" required>
+        </div>
+        <div>
+          <button type="submit" class="buttons modal-add-button">Adicionar Contato</button>
+          <button type="button" onclick="closeModal()" class="buttons modal-cancel-button">Cancelar</button>
+        </div>
       </form>
     </div>
     
