--- a/Ajax and API/contacts-app/index.html
+++ b/Ajax and API/contacts-app/index.html
@@ -16,7 +16,7 @@
 <body>
   <main>
     <h1 class="main-title">Lista de Contatos</h1>
-    <button onclick="openModal()" class="addContact-button">
+    <button onclick="showFormAddContact()" class="addContact-button">
       <img src="./images/icons/plus-icon.png">
       <span>Adicionar contato</span>
     </button>
@@ -26,8 +26,8 @@
     </div>
 
     <div class="modal-container modal-hidden">
-      <form onsubmit="addContact(event)" class="modal-content">
-        <h2 class="main-title">Adicionar Contato</h2>
+      <form onsubmit="addContact(event)" id="modal-submit-form" class="modal-content">
+        <h2 class="main-title" id="modal-title">Adicionar Contato</h2>
         <button type="button" class="modal-button-exit" onclick="closeModal()"><img src="./images/icons/exit-icon.png"></button>
         <div class="modal-inputs">
           <img src="./images/icons/user-icon.png">
@@ -38,7 +38,7 @@
           <input type="tel" id="modal_number" onInput="masks()" maxlength="15" placeholder="Número do Contato" required>
         </div>
         <div>
-          <button type="submit" class="buttons modal-add-button">Adicionar Contato</button>
+          <button type="submit" class="buttons modal-add-button" id="modal-confirm-button">Adicionar Contato</button>
           <button type="button" onclick="closeModal()" class="buttons modal-cancel-button">Cancelar</button>
         </div>
       </form>
