--- a/Ajax and API/contacts-app/index.html
+++ b/Ajax and API/contacts-app/index.html
@@ -7,10 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./script.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500&family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500&family=Poppins:wght@100;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/global.css">
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="./styles/modal.css">
+  <link rel="shortcut icon" href="./images/icons/user-icon.png" type="image/png">
   <title>Lista de Contatos</title>
 </head>
 <body>
