--- a/Ajax and API/pokedex/index.html
+++ b/Ajax and API/pokedex/index.html
@@ -15,6 +15,7 @@
 
   <script src="./services/pokeapi.js" defer></script>
   <script src="./components/pokedex/index.js" defer></script>
+  <script src="node_modules/axios/dist/axios.min.js"></script>
 
   <title>Pokedex</title>
 </head>
