Implementação parcial do DB

--- a/Ajax and API/contacts-app/index.html
+++ b/Ajax and API/contacts-app/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="modal-container modal-hidden">
-      <form onsubmit="addContact(event)" id="modal-submit-form" class="modal-content">
+      <form id="modal-submit-form" class="modal-content">
         <h2 class="main-title" id="modal-title">Adicionar Contato</h2>
         <button type="button" class="modal-button-exit" onclick="closeModal()"><img src="./images/icons/exit-icon.png"></button>
         <div class="modal-inputs">
