Creating new contents and styles for the homepage

--- a/Ajax and API/spotCar/index.html
+++ b/Ajax and API/spotCar/index.html
@@ -19,7 +19,6 @@
   <!-- Components -->
   <script src="./components/header/index.js" defer></script>
 
-
 </head>
 
 <body>
@@ -28,12 +27,41 @@
     <section class="banner-home">
       <div>
         <h1>Sua jornada começa aqui.</h1>
-        <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At assumenda illum debitis dolore unde eaque, provident nam, autem fuga, exercitationem ex? Dolorem autem et pariatur eos nobis quasi quod nemo!</span>
+        <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At assumenda illum debitis dolore unde eaque.</span>
         <button>Alugar</button>
       </div>
-      
+      <a href="#content-home">
+        <img src="./assets/icons/dropDown-icon.png" alt="Ícone de flecha pra baixo" class="dropDown bounce">
+      </a>
     </section>
-    <div id="root"></div>
+    
+    <section class="container content-home" id="content-home">
+      <img src="./assets/images/fleet-cars.jpg" alt="Demonstração de uma frota de carros">
+      <div class="content-home-description">
+        <h2>Temos opções para todos os gostos</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, enim accusantium! Deleniti dolorum tempore soluta totam dicta ipsam aperiam quo assumenda, nemo ipsum temporibus id facilis consequuntur autem sed iste.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, ad. In, vero molestiae voluptates, explicabo hic laboriosam necessitatibus ad at vitae voluptatem inventore. Voluptatum quo odio quia dolor? Accusamus, vel!</p>
+      </div>
+    </section>
+
+    <section class="container content-home" id="content-home">
+      <div class="content-home-description">
+        <h2>Manutenções e revisões sempre em dia</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, enim accusantium! Deleniti dolorum tempore soluta totam dicta ipsam aperiam quo assumenda, nemo ipsum temporibus id facilis consequuntur autem sed iste.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, ad. In, vero molestiae voluptates, explicabo hic laboriosam necessitatibus ad at vitae voluptatem inventore. Voluptatum quo odio quia dolor? Accusamus, vel!</p>
+      </div>
+      <img src="./assets/images/car-maintenance.jpg" alt="Homem reparando o motor do carro">
+    </section>
+
+    <section class="container content-home" id="content-home">
+      <img src="./assets/images/car-keys.jpg" alt="Chave de carro na ignição">
+      <div class="content-home-description">
+        <h2>Menos burocracia e mais praticidade</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, enim accusantium! Deleniti dolorum tempore soluta totam dicta ipsam aperiam quo assumenda, nemo ipsum temporibus id facilis consequuntur autem sed iste.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, ad. In, vero molestiae voluptates, explicabo hic laboriosam necessitatibus ad at vitae voluptatem inventore. Voluptatum quo odio quia dolor? Accusamus, vel!</p>
+      </div>
+    </section>
+
   </main>
 </body>
 
