Footer created and new styles added

--- a/Ajax and API/spotCar/index.html
+++ b/Ajax and API/spotCar/index.html
@@ -15,9 +15,11 @@
   <link rel="stylesheet" href="./styles/global.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="./components/header/styles.css">
+  <link rel="stylesheet" href="./components/footer/styles.css">
 
   <!-- Components -->
   <script src="./components/header/index.js" defer></script>
+  <script src="./components/footer/index.js" defer></script>
 
 </head>
 
@@ -44,7 +46,7 @@
       </div>
     </section>
 
-    <section class="container content-home" id="content-home">
+    <section class="container content-home">
       <div class="content-home-description">
         <h2>Manutenções e revisões sempre em dia</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, enim accusantium! Deleniti dolorum tempore soluta totam dicta ipsam aperiam quo assumenda, nemo ipsum temporibus id facilis consequuntur autem sed iste.</p>
@@ -53,7 +55,7 @@
       <img src="./assets/images/car-maintenance.jpg" alt="Homem reparando o motor do carro">
     </section>
 
-    <section class="container content-home" id="content-home">
+    <section class="container content-home">
       <img src="./assets/images/car-keys.jpg" alt="Chave de carro na ignição">
       <div class="content-home-description">
         <h2>Menos burocracia e mais praticidade</h2>
@@ -63,6 +65,7 @@
     </section>
 
   </main>
+
 </body>
 
 </html>
