Created database with flask sqlalchemy

--- a/Ajax and API/spotCar/index.html
+++ b/Ajax and API/spotCar/index.html
@@ -22,6 +22,7 @@
   <!-- Components -->
   <script src="./components/header/index.js" defer></script>
   <script src="./components/footer/index.js" defer></script>
+  <script src="./script.js" defer></script>
 
 </head>
 
@@ -45,9 +46,12 @@
     <section class="container cars-home card-container" id="content-home">
       <h2 >Escolha a opção ideial para sua ocasião</h2>
 
-      <section>
+      <section id="cars-card-home">
         <div class="card-content">
-          <h3>Chevrolet Onix Plus</h3>
+          <div class="card-header card-header-available">
+            <h3>Chevrolet Onix Plus</h3>
+            <span>Disponível</span>
+          </div>
           <img class="card-banner" src="./assets/images/onix-plus.png" alt="Foto do modelo onix plus">
   
           <section class="card-description">
@@ -91,7 +95,10 @@
         </div>
   
         <div class="card-content">
-          <h3>Fiat Mobi</h3>
+          <div class="card-header card-header-available">
+            <h3>Fiat Mobi</h3>
+            <span>Disponível</span>
+          </div>
           <img class="card-banner" src="./assets/images/mobi.png" alt="Foto do modelo fiat mobi">
   
           <section class="card-description">
@@ -135,7 +142,10 @@
         </div>
   
         <div class="card-content">
-          <h3>Peugeot 2008</h3>
+          <div class="card-header card-header-available">
+            <h3>Peugeot 2008</h3>
+            <span>Disponível</span>
+          </div>          
           <img class="card-banner" src="./assets/images/peugeot-2008.png" alt="Foto do modelo peugeot 2008">
   
           <section class="card-description">
@@ -179,7 +189,10 @@
         </div>
   
         <div class="card-content">
-          <h3>Toyota Corolla</h3>
+          <div class="card-header card-header-available">
+            <h3>Toyota Corolla</h3>
+            <span>Disponível</span>
+          </div>
           <img class="card-banner" src="./assets/images/corolla-2022.png" alt="Foto do modelo toyota corolla">
   
           <section class="card-description">
