Created method DELETE e user page

--- a/Ajax and API/spotCar/index.html
+++ b/Ajax and API/spotCar/index.html
@@ -39,7 +39,7 @@
         <h1>Sua jornada começa aqui.</h1>
         <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At assumenda illum debitis dolore unde
           eaque.</span>
-        <a href="./pages/cars.html">
+        <a href="./pages/cars/">
           <button>Alugar</button>
         </a>
 
