--- a/Ajax and API/spotCar/pages/cars/index.html
+++ b/Ajax and API/spotCar/pages/cars/index.html
@@ -7,25 +7,25 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../../assets/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;700&display=swap" rel="stylesheet">
   <title>spotCar | Carros</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="../styles/reset.css">
-  <link rel="stylesheet" href="../styles/global.css">
-  <link rel="stylesheet" href="../styles/card.css">
-  <link rel="stylesheet" href="../components/header/styles.css">
-  <link rel="stylesheet" href="../components/footer/styles.css">
-  <link rel="stylesheet" href="../components/modal/styles.css">
+  <link rel="stylesheet" href="../../styles/reset.css">
+  <link rel="stylesheet" href="../../styles/global.css">
+  <link rel="stylesheet" href="../../styles/card.css">
+  <link rel="stylesheet" href="../../components/header/styles.css">
+  <link rel="stylesheet" href="../../components/footer/styles.css">
+  <link rel="stylesheet" href="../../components/modal/styles.css">
   <link rel="stylesheet" href="./styles.css">
 
   <!-- Components -->
-  <script src="../services/script.js"></script>
-  <script src="../components/header/index.js" defer></script>
-  <script src="../components/footer/index.js" defer></script>
-  <script src="../components/modal/index.js" defer></script>
-  <script src="../shared/script.js" defer></script>
+  <script src="../../services/script.js"></script>
+  <script src="../../components/header/index.js" defer></script>
+  <script src="../../components/footer/index.js" defer></script>
+  <script src="../../components/modal/index.js" defer></script>
+  <script src="../../shared/script.js" defer></script>
   <script src="./index.js" defer></script>
 </head>
 
