Created method PUT and fixed bugs

--- a/Ajax and API/spotCar/index.html
+++ b/Ajax and API/spotCar/index.html
@@ -37,8 +37,7 @@
     <section class="banner-home">
       <div>
         <h1>Sua jornada começa aqui.</h1>
-        <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At assumenda illum debitis dolore unde
-          eaque.</span>
+        <span>O destino é por sua conta, mas o conforto e a praticidade é de nossa responsabilidade.</span>
         <a href="./pages/cars/">
           <button>Alugar</button>
         </a>
@@ -50,28 +49,26 @@
     </section>
 
     <section class="container cars-home card-container" id="content-home">
-      <h2>Escolha a opção ideial para sua ocasião</h2>
+      <h2>Confira os veículos destaques do mês</h2>
 
       <section id="cars-card-home"></section>
 
     </section>
 
     <section class="container content-home">
-      <img src="./assets/images/fleet-cars.jpg" alt="Demonstração de uma frota de carros">
+      <img src="./assets/images/travel.jpg" alt="Demonstração de uma frota de carros">
       <div class="content-home-description">
-        <h2>Temos opções para todos os gostos</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, enim accusantium! Deleniti dolorum
-          tempore soluta totam dicta ipsam aperiam quo assumenda, nemo ipsum temporibus id facilis consequuntur autem
-          sed iste.</p>
+        <h2>Que tal conhecer lugares incríveis?</h2>
+        <p>Oferecemos o melhor para que você possa explorar lugares incríveis, desde planos mensais como também planos que incluem hospedagem completa.</p>
+        <p>Mensalmente temos diversos pacotes, não fique de fora, acompanhe todas ofertas em nossas redes sociais.</p>
       </div>
     </section>
 
     <section class="container content-home">
       <div class="content-home-description">
         <h2>Manutenções e revisões sempre em dia</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, enim accusantium! Deleniti dolorum
-          tempore soluta totam dicta ipsam aperiam quo assumenda, nemo ipsum temporibus id facilis consequuntur autem
-          sed iste.</p>
+        <p>Todos os nossos carros são vistoriados frequentemente para garantir a entrega com qualidade aos nossos clientes.</p>
+        <p>Possuímos carros para atender as mais diversas ocasiões, desde viagens, como também uso diário.</p>
       </div>
       <img src="./assets/images/car-maintenance.jpg" alt="Homem reparando o motor do carro">
     </section>
