--- a/Ajax and API/spotCar/pages/cars/index.html
+++ b/Ajax and API/spotCar/pages/cars/index.html
@@ -34,7 +34,7 @@
     <section id="modal-container" class="hidden modal-container"></section>
     <div class="container cars-content">
       <h1>Alugue seu carro sem burocracia</h1>
-      <p class="cars-content-subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+      <p class="cars-content-subtitle">Escolha a opção ideal para sua ocasião.</p>
 
       <section class="container card-container cars-card-container" id="content-home">
   
