--- a/Ajax and API/market-list/index.html
+++ b/Ajax and API/market-list/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="./styles/global.css">
   <link rel="stylesheet" href="./styles/header.css">
@@ -36,7 +36,7 @@
   <main>
 
     <div class="main-search-and-product">
-      <input type="text" id="search">
+      <input type="text" id="search" placeholder="Pesquise um item da lista">
       <button onclick="showModal()">+ Novo Produto</button>
     </div>
 
