Added 'disabled' behavior to search button

--- a/Ajax and API/bff-work/index.html
+++ b/Ajax and API/bff-work/index.html
@@ -18,7 +18,7 @@
 
     <form onsubmit="handleSubmit(event)">
       <input type="text" id="username" placeholder="user" required>
-      <button>
+      <button id="button-search">
         <span id="span-button-search">Buscar</span>
         <div id="loader" class="loader-ring hidden">
           <div></div>
